--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,5 @@
 @import '../fonts/font-awesome-4.7.0/css/font-awesome.min.css';
 
-
 body {background:#eee;border:0;font:12px Arial, Helvetica, sans-serif;line-height:20px}
 .container { background: #2e2e2e;}
 .main { margin:0 auto;width:100%}
@@ -11,9 +10,8 @@ body {background:#eee;border:0;font:12px Arial, Helvetica, sans-serif;line-heigh
 aside {background: #191919;color:#fff;}
 
 /* main layout */
-/*a {color:#87a310;text-decoration:underline;outline:none}*/
-a {color: #007bff;text-decoration: none;background-color: transparent;-webkit-text-decoration-skip: objects;}
-a:hover {text-decoration:none}
+/*a {color: #007bff;text-decoration: none;background-color: transparent;-webkit-text-decoration-skip: objects;}
+a:hover {text-decoration:none}*/
 h1 {margin-left:-7px;position:absolute;z-index:2;background:url(../images/logo_img.png) 0 0 no-repeat;height:95px;padding-left:191px;padding-top:28px}
 h2 {font-size:37px;color:#fff; line-height:1.2em;padding:28px 0 27px 0;letter-spacing:-1px}
 h2.pad_bot1 {padding-bottom:17px}
@@ -33,20 +31,13 @@ header {position:relative;height:97px; background-color: black}
 #icons {float:right;padding:34px 29px 0 0}
 #icons li {float:left;padding-left:10px}
 
-/*li {list-style: none;}*/
-/*#menu {padding:33px 0 0}
-#menu li {padding:26px 37px 23px 30px;float:left;}*/
 #menu .end {background:none;padding-right:0}
 #menu li a {display:inline-block;overflow:hidden;font-size:21px;color:#d4d3d3;line-height:1.2em;text-decoration:none;letter-spacing:-1px}
 #menu li a:hover, #menu .menu_active a {color:#87a310}
 li {list-style: none;}
 
 /*Menu*/
-
-.bg-dark {
-    background-color: #2e2e2e !important;
-
-}
+.bg-dark {background-color: #2e2e2e !important;}
 .navbar-expand-md {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -71,7 +62,6 @@ li {list-style: none;}
     justify-content: space-between;
     padding: .5rem 1rem;
 }
-
 .navbar-dark .navbar-brand {
     color: #fff;
 }
@@ -89,12 +79,11 @@ li {list-style: none;}
     height:38px;
     text-indent:-9999px;
 }
+.navbar-nav .nav-link:hover {color: rgba(255,255,255,.75);}
 
-.navbar-nav .nav-link:hover {
-    color: rgba(255,255,255,.75);
-}
 
 /*Carousel Propiedades*/
+.carousel-img {width:1025px;height:500px; }
 .carousel-indicators .active {background-color: #87a310;}
 .carousel-caption {
   position: absolute;
@@ -128,9 +117,11 @@ li {list-style: none;}
   list-style: none;
 }
 
+
 /*Formulario Busqueda*/
-#form_1 {background:#191919;padding-bottom:16px;color:#bababa}
+#form_1 {background:#191919;height:500px;padding-bottom:16px;color:#bababa}
 #form_1 h3 {padding:23px 0 4px 0;border-bottom:1px solid #8c8c8c;margin-bottom:15px}
+#form_1 label {padding-top:5px}
 #form_1 .input {background:#fff; font:12px Arial, Helvetica, sans-serif;color:#191919;float:left;padding:3px 10px;height:14px;width:191px !important}
 #form_1 .row {min-height:46px;width:100%}
 #form_1 .row_select {min-height:46px;width:100%}
@@ -145,31 +136,44 @@ li {list-style: none;}
 #form_1 .pad1 {padding:0 33px}
 
 /* footer */
-footer {height:100px;color:#191919;padding:45px 30px 20px 30px;font-size:13px}
+footer {height:100px;width:100%;color:#191919;padding:15px 30px 20px 30px;font-size:13px}
 footer a{}
 footer a:hover{}
+.maintitle {font-size: 19px;font-weight: 600;color:#87a310;letter-spacing: 1px;margin: 0 0 30px;padding: 0;}
 .call {float:right;font-size:32px;color:#87a310;line-height:1.2em;letter-spacing:-1px;padding-top:2px}
 .call span {font-size:31px;color:#191919}
+dt {font-weight: 700;margin-left: 1.3rem;}
+dd {margin-bottom: 0rem;margin-left: 1.3rem;}
 
 /*Formulario Contacto*/
-#ContactForm {background:#454545;height:400px;padding-bottom:16px;color:#bababa}
+#ContactForm {background:#454545;height:500px;padding-bottom:16px;color:#bababa}
 #ContactForm h3 {padding:23px 0 4px 0;border-bottom:1px solid #8c8c8c;margin-bottom:15px}
 #ContactForm span {width:70%}
-#ContactForm .wrapper {min-height:30px}
+#ContactForm .wrapper {min-height:30px; padding-top: 15px;}
 #ContactForm .textarea_box {min-height:100px;width:100%;overflow:hidden;padding-bottom:10px}
 #ContactForm a {margin-right:10px;float:left}
 #ContactForm .input {width:254px;background:#fff;padding:3px 10px;color:#191919;font:12px Arial, Helvetica, sans-serif;height:14px}
 #ContactForm textarea {overflow:auto;background:#fff;padding:3px 10px;color:#191919;font:12px Arial, Helvetica, sans-serif;height:100px;margin:0}
 
-.maintitle {font-size: 19px;font-weight: 600;letter-spacing: 1px;margin: 0 0 30px;padding: 0;}
-/*.maintitle span {
-    background: #fff none repeat scroll 0 0;
-    padding-right: 10px;
-    text-transform: uppercase;
-}*/
+/*Formulario Login*/
+#form_login {background:#191919;height:400px;padding-bottom:16px;color:#bababa}
+#form_login h3 {padding:23px 0 4px 0;border-bottom:1px solid #8c8c8c;margin-bottom:15px}
+#form_login h3 {padding:23px 0 4px 0;border-bottom:1px solid #8c8c8c;margin-bottom:15px}
+#form_login .input {background:#fff; font:12px Arial, Helvetica, sans-serif;color:#191919;float:left;padding:3px 10px;height:14px;width:191px !important}
+#form_login .row {min-height:46px;width:100%}
+#form_login .cols {width:50%}
+#form_login .pad_left1 {padding-left:23px}
+#form_login .button {margin-top:17px;background-image:url(../images/button_bg_form.png);width:94px}
+/*#form_login .button {display:inline-block;width:89px;line-height:26px;height:26px;color:#fff;text-decoration:none;background:url(../../images/button_bg_form.png) 0 0 no-repeat;text-align:center}
+#form_login .button:hover {background-position:bottom;color:#191919}
+*/#form_login .pad_bot1 {padding-bottom:9px}
+#form_login .pad1 {padding:0 33px}
+#form_login .wrapper {padding-top: 15px}
 
 /*-------------------------------------------------------------*/
-
+/*Alertas*/
+.hidden {display: none !important;}
+.alert {border: 1px solid transparent;border-radius: 4px;position: relative;padding: 0;margin-bottom: 0;border: 1px solid transparent;border-radius: .25rem;}
 /* Tooltips */
 .aToolTip {	border:1px solid #fff;background:#87a310;color:#fff;margin:0;padding:2px 10px;font-size:11px}
 .aToolTip .aToolTipContent {position:relative;margin:0;padding:0}
